--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run pytext
-        run: docker compose run pytext
+        run: docker compose run pytest
